--- a/config/sync/language/nl/views.view.products_products.yml
+++ b/config/sync/language/nl/views.view.products_products.yml
@@ -3,12 +3,22 @@ display:
     display_options:
       title: Zoekresultaten
       filters:
-        search_api_language:
-          expose:
-            description: ''
         search_api_fulltext:
           expose:
             placeholder: 'Zoek planten'
+        search_api_language:
+          expose:
+            description: ''
+  page_1:
+    display_options:
+      header:
+        result:
+          content: '<p class="view-result"><span class="view-result__start">@start</span> - <span class="view-result_end">@end</span> van <span class="view-result__total">@total</span></p>'
+      pager:
+        options:
+          tags:
+            first: '« Eerste'
+            last: 'Laatste »'
   default:
     display_options:
       filters:
